# mlprojects

genric-ml-project/: .gitignore  app.py  application.py  main.py  pyproject.toml  setup.py
genric-ml-project/artifacts/: preprocessor.pkl
genric-ml-project/artificats/: model.pkl
genric-ml-project/catboost_info/: catboost_training.json  time_left.tsv
genric-ml-project/catboost_info/learn/: events.out.tfevents
genric-ml-project/logs/06_13_2026_08_08_16/: 06_13_2026_08_08_16
genric-ml-project/logs/06_13_2026_17_54_34/: 06_13_2026_17_54_34
genric-ml-project/logs/06_14_2026_13_52_52/: 06_14_2026_13_52_52
genric-ml-project/logs/06_14_2026_13_53_13/: 06_14_2026_13_53_13
genric-ml-project/logs/06_14_2026_15_16_45/: 06_14_2026_15_16_45
genric-ml-project/logs/06_14_2026_15_17_54/: 06_14_2026_15_17_54
genric-ml-project/logs/06_14_2026_15_20_35/: 06_14_2026_15_20_35
genric-ml-project/logs/06_14_2026_15_22_22/: 06_14_2026_15_22_22
genric-ml-project/logs/06_14_2026_15_26_20/: 06_14_2026_15_26_20
genric-ml-project/logs/06_14_2026_15_58_59/: 06_14_2026_15_58_59
genric-ml-project/logs/06_14_2026_16_00_25/: 06_14_2026_16_00_25
genric-ml-project/logs/06_14_2026_16_53_45/: 06_14_2026_16_53_45
genric-ml-project/logs/06_14_2026_17_09_16/: 06_14_2026_17_09_16
genric-ml-project/logs/06_14_2026_17_10_40/: 06_14_2026_17_10_40
genric-ml-project/notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
genric-ml-project/src/: exception.py  logger.py  utils.py
genric-ml-project/templates/: home.html  index.html
(+9 files in other folders)
