[project]
name = "genric-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kanak", email = "kanakgupta814@gmail.com" }]
dependencies = [
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "flask>=3.1.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "panda>=0.3.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]


[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
